src/objects/CAFE_Practices_Score__c.object
<CustomObject>
    <fields>
        <fullName>Baseline__c</fullName>
        <label>Baseline</label>
        <referenceTo>CBL2_Farmer__c</referenceTo>
        <relationshipLabel>CAFE_Practices_Scores</relationshipLabel>
        <relationshipName>CAFE_Practices_Scores</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Coffee_Growing_Practices_Met__c</fullName>
        <formula>IF(INCLUDES(Farm__r.waterBodiesBufferZones__c , &quot;&gt; al 50% de cuerpos de agua permanentes&quot;) || INCLUDES(Farm__r.waterBodiesBufferZones__c , &quot;100% de cuerpos de agua permanentes&quot;) , 1, 0) + IF(INCLUDES(Farm__r.waterBodiesBufferZones__c , &quot;&gt; al 50% de cuerpos de agua intemitentes&quot;) || INCLUDES(Farm__r.waterBodiesBufferZones__c , &quot;100% de cuerpos de agua intermitentes&quot;), 1, 0) +  IF(TEXT( Farm__r.wasteDisposedSafeWay__c ) = &apos;Cumple&apos;, 1, 0) +  IF(TEXT(Farm__r.erosionZonesIdentified__c)= &apos;Sí&apos;, 1, 0) +  IF(INCLUDES( Farm__r.farmManagmtDocuments__c, &quot;Plan de conservación de suelos&quot; ), 1, 0) + IF(Farm__r.percErosionZoneRiskPrevention__c &gt;= 0.5, 2, 0) +  IF(Farm__r.percErosionZoneRiskPrevention__c ==  100, 1, 0) +  IF(INCLUDES( Farm__r.weedsControlMethods__c,&quot;Control físico/mecánico&quot;) || INCLUDES( Farm__r.weedsControlMethods__c,&quot;Cultivos de cobertura&quot; ) || INCLUDES( Farm__r.weedsControlMethods__c,&quot;Mulch (colchón material orgánico)&quot; ) || INCLUDES( Farm__r.weedsControlMethods__c,&quot;Distancias de siembra&quot; ) || INCLUDES( Farm__r.weedsControlMethods__c,&quot;Manejo de Sombra&quot; ), 1, 0) + IF( Farm__r.percShadeLeguminous__c &gt;= 0.25, 2, 0) +  IF(TEXT( Farm__r.lastSoilSampling__c )= &apos;entre 1-2 años&apos; || TEXT( Farm__r.lastSoilSampling__c )= &apos;menos de 1 año&apos; , 1, 0) +  IF(TEXT( Farm__r.fertAcordingSoilAnalysis__c)= &apos;Fertiliza basado en análisis de suelo&apos;, 1, 0) +  IF(INCLUDES( Farm__r.farmManagmtDocuments__c, &quot;Plan de manejo de sombra&quot;), 1, 0) +  IF( Farm__r.shadowLevelsNumber__c = 1  &amp;&amp;  Farm__r.percentageShade__c  &gt;=  0.1, 1, 0) +  IF( Farm__r.numberOfShadeSpecies__c  &gt;= 2, 1, 0) + IF( Farm__r.shadowLevelsNumber__c = 1  &amp;&amp;  Farm__r.percentageShade__c  &gt;=  0.4, 1, 0) +  IF( Farm__r.shadowLevelsNumber__c &gt;= 2, 1, 0) +  IF(TEXT( Farm__r.promotesFloraAndFaunaPreservation__c)= &apos;Si se cumple&apos;, 1, 0) +  IF(TEXT( Farm__r.turnedForestInCropArea__c) &lt;&gt; &apos;Sí&apos;, 1, 0) +  IF( (Farm__r.Farm_area_Ha__c/ Farm__r.Forest_Area_Ha__c )&gt;= 0.05 , 1, 0) +  IF(TEXT( Farm__r.biologicalDiversityContrib__c)= &apos;Sí&apos;, 1, 0) +  IF(INCLUDES( Farm__r.diseaseControlAgrochemicals__c,&quot;No usa ningún producto químico&quot;) &amp;&amp; INCLUDES( Farm__r.weedsControlHerbicides__c , &quot; &quot;) &amp;&amp; INCLUDES( Farm__r.plagueControlAgroChemicals__c , &quot;No usa ningún producto químico&quot;), 1, 0) +  IF(INCLUDES( Farm__r.farmManagmtDocuments__c , &quot;Registro de insumos, Plan de MIPE&quot;), 1, 0) +  IF(TEXT( Farm__r.safeStorageForSupplies__c ) = &apos;Cumple&apos;, 2, 0) +  IF(INCLUDES( Farm__r.agrochemOriginalContainerProperUse__c , &quot;Cumple&quot;), 1, 0) +  IF(INCLUDES( Farm__r.farmManagmtDocuments__c , &quot;Plan de MIPE&quot;), 1, 0) +  IF(INCLUDES( Farm__r.registersPlague_DiseaseCtrlSupplies__c , &quot;Fecha de aplicación, Dosis, Lote&quot;), 1, 0) +  IF(TEXT( Farm__r.containersNotReused__c) = &apos;Cumple&apos;, 1, 0) + IF(INCLUDES( Farm__r.farmManagmtDocuments__c , &quot;Plan y registro de Podas de café&quot;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coffee Growing Practices Met</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coffee_Growing__c</fullName>
        <label>Coffee Growing</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Farm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Farm</label>
        <referenceTo>CBL2_Farm__c</referenceTo>
        <relationshipLabel>CAFE_Practices_Scores</relationshipLabel>
        <relationshipName>CAFE_Practices_Scores</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Score__c</fullName>
        <formula>( Social_Responsibility__c * 0.4186) + (Coffee_Growing__c  * 0.4186) + ( Wet_Coffee_Processing__c * 0.1628)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Social_Responsibility_Practices_Met__c</fullName>
        <formula>IF( Farm__r.permWorkersMinimumMonthWage__c &gt;= 644.350, 1, 0)+ IF( Farm__r.tempWorkersMinimumDailyWage__c &gt;= (644.350/30), 1, 0) +  IF( TEXT(Farm__r.workersPaidRegularly__c) = &apos;Cumple&apos;, 1, 0)+  IF( INCLUDES(Farm__r.forcedLabor__c, &quot;No hay trabajo forzado, No hay prácticas de retención, No hay empleados ilegales, No hay empleados ilegales, No se les retiene su identificación, No pagan depósitos para poder trabajar&quot;) , 1, 0) +  IF(INCLUDES( Farm__r.hiresUnderAge__c, &quot;Sí, de menos de 14 años&quot;), 1, 0) +  IF(INCLUDES( Farm__r.underAgeWorkConditions__c, &quot;Van a la escuela, No sobrepasan las horas de trabajo, No ponen en riesgo salud y crecimiento&quot;), 1, 0) +  IF(TEXT( Farm__r.discrimination__c) = &apos;De acuerdo&apos;, 1, 0) + IF(TEXT(Farm__r.physicalOralSexualAbuse__c)= &apos;En desacuerdo&apos;, 1, 0) +  IF(TEXT( Baseline__r.socioe_childrenStudying__c )= &apos;Si, TODOS están asistiendo&apos;, 1, 0) +  IF(TEXT( Farm__r.useOfProtApplicationDangSubstances__c)= &apos;Sí, siempre&apos;, 1, 0) +  IF(TEXT( Farm__r.underagePregnantProtected__c)= &apos;Sí se cumple&apos;, 1, 0) +  IF(TEXT( Farm__r.dangSubstancesManipulatorsTrained__c)= &apos;Sí&apos;, 1, 0) +  IF(TEXT( Farm__r.entranceProhibited48Hours__c)= &apos;Cumple&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social Responsibility Practices Met</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social_Responsibility__c</fullName>
        <formula>Social_Responsibility_Practices_Met__c / 13</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social Responsibility</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wet_Coffee_Processing_Practices_Met__c</fullName>
        <formula>IF(TEXT( Farm__r.wetmill_lastWashWaterRecycled__c) = &apos;Sí&apos;, 1, 0) +  IF(TEXT( Farm__r.wetmill_riskOfContamWResidualWater__c )= &apos;No&apos;, 1, 0) +  IF(TEXT( Farm__r.wetmill_residualWaterDistOver40__c ) = &apos;Sí&apos;, 1, 0) +  IF(INCLUDES( Farm__r.wetmill_pulpManagement__c ,&quot;La amontona sin protección&quot;) || INCLUDES( Farm__r.wetmill_pulpManagement__c ,&quot;Lo vierte al río&quot;) || INCLUDES( Farm__r.wetmill_pulpManagement__c ,&quot;La bota&quot;) || INCLUDES( Farm__r.wetmill_pulpManagement__c ,&quot;Riesgo de contaminar fuentes de agua&quot;) || INCLUDES( Farm__r.wetmill_pulpManagement__c ,&quot;Otros&quot;), 0, 1) + IF(INCLUDES( Farm__r.wetmill_pulpManagement__c ,&quot;Procesa en compost en cuanto es posible&quot;), 1, 0) +  IF(INCLUDES( Farm__r.wetmill_dryMeans__c , &quot;Secadora mecánica&quot;) || INCLUDES( Farm__r.wetmill_dryMeans__c , &quot;Otro&quot;), 0, 1) +  IF(TEXT( Farm__r.wetmill_documentationAndLabeling__c ) = &apos;Sí&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wet Coffee Processing Practices Met</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wet_Coffee_Processing__c</fullName>
        <formula>Wet_Coffee_Processing_Practices_Met__c / 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wet Coffee Processing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>CAFE_Practices_Score</label>
    <nameField>
        <displayFormat>CPS-{000000}</displayFormat>
        <label>CAFE_Practices_Score_Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAFE_Practices_Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>